feat: add proxy health-check refresh loop and control API
Implement automated proxy health checks with configurable scheduling, optional apply/persist behavior, and status observability. Add POST /api/proxies/refresh_valid and expose health_check metrics in /api/status.

--- a/config/config.ini
+++ b/config/config.ini
@@ -9,9 +9,16 @@ getip_url        = http://example.com/getip
 proxy_username   = 
 proxy_password   = 
 proxy_file       = ip.txt
-check_proxies    = true
-test_url         = 
-language         = cn
+check_proxies             = true
+test_url                  =
+health_check_enabled      = true
+health_check_interval     = 300
+health_check_timeout      = 8
+health_check_concurrency  = 50
+health_check_auto_apply   = false
+health_check_auto_persist = false
+health_check_min_pool_size = 1
+language                  = cn
 whitelist_file   = whitelist.txt
 blacklist_file   = blacklist.txt
 ip_auth_priority = whitelist
