feat(health-check): add traffic-simulation validation metrics and getip retry
Strengthen proxy health checks with multi-attempt pass-rate evaluation, richer status fields, and failure-reason reporting while adding getip fetch retries and docker compose local build defaults for more reliable operations.

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,78 +1,62 @@
 [Server]
 ; 控制台日志显示级别：1=基础，2=详细（按程序实现为准）
-display_level              = 1
-
+display_level                   = 1
 ; 数据面监听端口（HTTP/SOCKS5 入站）
-port                       = 1080
-
+port                            = 1080
 ; 控制面 Web/UI 监听端口
-web_port                   = 5000
-
+web_port                        = 5000
 ; 代理切换模式：cycle=循环切换，loadbalance=负载均衡
-mode                       = cycle
-
+mode                            = cycle
 ; cycle 模式切换间隔（秒）
-interval                   = 300
-
+interval                        = 30
 ; 是否启用 API 拉取代理：true/false
-use_getip                  = false
-
+use_getip                       = true
 ; API 拉取地址（当 use_getip=true 时生效）
-getip_url                  = http://example.com/getip
-
+getip_url                       = https://proxy.scdn.io/api/get_proxy.php?protocol=http&count=20&country_code=HK
 ; API 返回代理的认证用户名（可选）
-proxy_username             =
-
+proxy_username                  = 
 ; API 返回代理的认证密码（可选）
-proxy_password             =
-
+proxy_password                  = 
 ; 本地代理池文件名（位于 config/ 目录）
-proxy_file                 = ip.txt
-
+proxy_file                      = ip.txt
 ; 是否启用代理有效性检测：true/false
-check_proxies              = true
-
+check_proxies                   = true
 ; 代理检测目标 URL（为空时程序使用默认值）
-test_url                   =
-
+test_url                        = https://iplark.com
 ; 是否启用周期性健康检查：true/false
-health_check_enabled       = true
-
+health_check_enabled            = true
 ; 健康检查执行间隔（秒）
-health_check_interval      = 300
-
+health_check_interval           = 300
 ; 单个代理健康检查超时（秒）
-health_check_timeout       = 8
-
+health_check_timeout            = 8
 ; 健康检查并发数
-health_check_concurrency   = 50
-
+health_check_concurrency        = 50
 ; 健康检查后是否自动应用有效代理池：true/false
-health_check_auto_apply    = false
-
+health_check_auto_apply         = true
 ; 自动应用后是否持久化写回 proxy_file：true/false
-health_check_auto_persist  = false
-
+health_check_auto_persist       = true
 ; 自动应用有效代理池的最小数量阈值
-health_check_min_pool_size = 1
-
+health_check_min_pool_size      = 1
+; 健康检查模式：basic=旧版基础检测，traffic_simulation=模拟真实流量检测
+health_check_mode               = traffic_simulation
+; 每个代理在检测窗口内的通过率阈值（0~1）
+health_check_success_ratio      = 0.67
+; 每个代理每轮健康检查的检测次数
+health_check_attempts_per_proxy = 3
+; 流量模拟检测目标端口（默认 443）
+health_check_target_port        = 443
 ; 控制台语言：cn/en
-language                   = cn
-
+language                        = cn
 ; 白名单文件名（位于 config/ 目录）
-whitelist_file             = whitelist.txt
-
+whitelist_file                  = whitelist.txt
 ; 黑名单文件名（位于 config/ 目录）
-blacklist_file             = blacklist.txt
-
+blacklist_file                  = blacklist.txt
 ; IP 认证优先级：whitelist 或 blacklist
-ip_auth_priority           = whitelist
-
+ip_auth_priority                = whitelist
 ; 控制面 API Token（通过 query ?token= 传递）
-token                      = honmashironeko
-
+token                           = honmashironeko
 ; API 返回无 scheme 的代理时使用的默认协议：http/https/socks5
-getip_proxy_scheme         = http
+getip_proxy_scheme              = http
 
 [Users]
 neko = 123456
